Ticket #1128: Fixed scrollbar issue with large dialog pages.

--- a/monitor/ui/src/main/java/org/eobjects/datacleaner/monitor/resources/shared.css
+++ b/monitor/ui/src/main/java/org/eobjects/datacleaner/monitor/resources/shared.css
@@ -112,6 +112,7 @@ a:hover {
 }
 
 .gwt-PopupPanelGlass {
+	position: fixed !important;
 	opacity: 0.5;
 	filter: alpha(opacity=50);
 }
